# benchbase

./: .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/src/benchbase/: cli.py  config.py  litellm_client.py  main.py
backend/src/benchbase/db/: models.py  session.py
backend/src/benchbase/runners/: coding.py  reasoning.py  speed.py  tool_use.py
config/: settings.yaml  settings.yaml.example
doc/: docker-portainer-migration.md  product-brief.md
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/arena/: ArenaPage.tsx
frontend/src/components/benchmarks/: BenchmarkRunLogModal.tsx  BenchmarksPage.tsx  RunTimingLine.tsx  formatScore.ts
frontend/src/theme/: theme.ts
scripts/: arena_speed_sim.py
src/benchbase/: __init__.py  batch_scheduler.py  benchmark_duration.py  benchmark_sampling.py  cli.py  config.py  litellm_client.py  main.py  mcp_server.py  model_colors.py  run_controller.py  run_executor.py  run_log.py  run_timing.py  scoring.py  server_process.py
src/benchbase/db/: models.py  session.py
src/benchbase/runners/: base.py  coding.py  litebench_parse.py  litebench_patches.py  litebench_runner.py  llama_benchy_corpus_patch.py  llama_benchy_fix.py  llama_benchy_results_patch.py  llama_benchy_runner.py  llama_benchy_stream.py  lm_eval_log_patch.py  lm_eval_runner.py  reasoning.py  registry.py  run_metadata.py  sample_transcript.py  speed.py  subprocess_utils.py  tool_use.py
(+15 files in other folders)
