[project]
name = "benchbase"
version = "0.1.0"
description = "Local LLM Benchmark Dashboard – orchestration and visualization layer for evaluating locally hosted LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "sse-starlette>=2.2",
    "rich>=13.9",
    "llama-benchy>=0.3",
    "lm_eval[api]>=0.4",
    "litebench>=0.3",
]

[project.scripts]
benchbase = "benchbase.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchbase"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
